Use official start code of spigot