@@ -4,6 +4,6 @@ loop="0"
 
 while [ $loop = 0 ]
 do
-java -Xmx512M -Xms512M -jar *.jar
+java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot.jar
 sleep 10
 done
